--- a/docs/aktuelles.mdx
+++ b/docs/aktuelles.mdx
@@ -33,4 +33,9 @@ Verpasse kein Update mehr von uns.
 
 ### Aboniere Kalender
 
+<button
+  onClick={() => window.open("https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ca3f2350-3f02-47f9-90b0-0b5c8b0b9acb/cid-15939253758E7200/calendar.ics", "_blank")}
+  className="button button--primary"
+  href="">Aboniere</button>
+
 
