--- a/docs/aktuelles.mdx
+++ b/docs/aktuelles.mdx
@@ -7,7 +7,7 @@ hide_table_of_contents: false
 
 Hier findest du alle anstehende Termine und einen kurzen Überblick über unsere Aktivitäten.
 
-Unsere Events sind offen für alle. **Eine Parteimitgliedschaft ist nicht erforderlich. [Sprich uns an](mailto:Johannes.Rupieper@mac.com) und [mach mit](/mach-mit)!** 
+Unsere Events sind offen für alle. **Eine Parteimitgliedschaft ist nicht erforderlich. [Sprich uns an](mailto:Johannes.Rupieper@mac.com) und [mach mit](/machmit)!** 
 
 <iframe 
   id="calendar-view"
