--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -4,32 +4,45 @@ sidebar_position: 1
 
 import Profile from '@site/src/components/Profile/profile';
 
-# Die Abteilung
+# Unsere Abteilung
 
-Teambild
+![wir](/img/Abteilung.jpg)
 
 Unsere Abteilung *(Ortsverein)*
+
+•	Ortsvereinsfreundschaft mit Trier Gartenstadt-Mitte 
+•	wir stellen 9 Delegiert*innen bei KDV und KVV
 
 ## Unser Kiez
 Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenviertel, Nikolaiviertel und die Gegend zwischen Museumsinsel und Alexanderplatz. Also der Kern des historischen Berlin.
 
 In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nachbarschaft gestalten möchten.
-TODO
+
+
 
 <iframe width="100%" height="300px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/de/map/abteilungsgebiet_977759?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=null&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&captionMenus=true"></iframe>
+
+## Hier findest du uns
+
+### Kreisbüro: Mitte
+
+### Kneipe: Anna Koschke
 
 ## Vorsitzenden
 <div className="profile-row">
     <Profile 
         name="Kerstin Spriesterbach" 
-        twitter="kerstin"
-        instagram="kerstin"
+        mail="spriesterbach.k@gmx.de"
+        twitter="bundestagsbabe"
+        instagram="krstnsprstrbch"
         srcName="kerstin.jpeg"
     ></Profile>
     <Profile 
         name="Hendrik Kempt" 
+        mail="hendrik_kempt@yahoo.de"
         srcName="hendrik.jpg"
-        instagram="kerstin"
+        twitter="hkem"
+        instagram="hennekkemmek"
     ></Profile>
 </div>
 
@@ -59,11 +72,100 @@ TODO
         name="Lennart Schmidt" 
         rolle="Kassierer"
     ></Profile>
+    <Profile 
+        name="Peter Vollmer" 
+        rolle="Seniorenbeauftragter"
+    ></Profile>
+        <Profile 
+        name="-" 
+        rolle="Revisor*in"
+    ></Profile>
+        <Profile 
+        name="-" 
+        rolle="Mitgliederbeauftragte*r"
+    ></Profile>
 </div>
 
 
-## Bekannte Mitglieder
+## MandatsträgerInnen aus Mitte
 
-### Verena Hubertz
+### Europa
 
-### Dotschy Reinhard
+<div className="profile-row">
+    <Profile 
+        name="Gaby Bischoff" 
+        srcName="gaby.jpeg"
+        rolle="🇪🇺 Mitglied des Europäischen Parlaments (MdEP)"
+        instagram="gabybischoff"
+        twitter="gabischoff"
+    ></Profile>
+</div>
+
+### Bundesebene
+
+<div className="profile-row">
+    <Profile 
+        name="Annika Klose" 
+        srcName="Annika.jpg"
+        rolle="Mitglied des Bundestags (MdB)"
+        mail="annika.klose.wk@bundestag.de"
+        instagram="annikloseberlin"
+        twitter="anniklose"
+    ></Profile>
+</div>
+
+### Landesebene
+
+<div className="profile-row">
+    <Profile 
+        name="Mathias Schulz"
+        srcName="mathiasschulz.jpg" 
+        rolle="Mitglied des Abgeordnetenhauses (MdA)"
+        mail="mathias.schulz@spd.parlament-berlin.de"
+        twitter="mathiasschulz"
+        instagram="mathiasschulz"
+    ></Profile>
+    <Profile 
+        name="Maja Lasic" 
+        srcName="maja.png" 
+        mail="maja.lasic@spd.parlament-berlin.de"
+        rolle="Mitglied des Abgeordnetenhauses (MdA)"
+        twitter="lasicmaja"
+        instagram="majalasic"
+    ></Profile>
+    <Profile 
+        name="Max Landero" 
+        srcName="MaxLandero.png"
+        rolle="Staatssekretär für Integration, Antidiskriminierung und Vielfalt"
+        instagram="maxlandero"
+        twitter="MaxLandero"
+    ></Profile>
+    <Profile 
+        name="Alexander Slotty" 
+        srcName="AlexanderSlotty.jpg"
+        rolle="Staatssekretär für Bauen und Amtschef"
+    ></Profile>
+</div>
+
+
+### Bezirksebene
+
+<div className="profile-row">
+    <Profile 
+        name="Susanne Fischer" 
+        srcName="susanne_fischer.jpeg"
+        rolle="Co-Fraktionsvorsitzende BVV"
+    ></Profile>
+    <Profile 
+        name="Dorothea Riedel" 
+        srcName="dorothea-riedel.jpeg"
+        rolle="Co-Fraktionsvorsitzende BVV"
+    ></Profile>
+    <Profile 
+        name="Ephraim Gothe" 
+        srcName="Ephraim.jpeg"
+        rolle="Bezirksstadtrat für Stadtentwicklung und Facility Management"
+        mail="carmen.bergemann@ba-mitte.berlin.de"
+        instagram="ephraimgothe"
+    ></Profile>
+</div>
