--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -8,17 +8,20 @@ import Profile from '@site/src/components/Profile/profile';
 
 ![wir](/img/Abteilung.jpg)
 
-Unsere Abteilung *(Ortsverein)*
+Die SPD Berlin-Mitte besteht aus 15 Abteilungen. 
+Wir sind **Mitte 2: Alexanderplatz** und unsere Abteilung zählt **170 Genossinen und Genossen**.
 
-•	Ortsvereinsfreundschaft mit Trier Gartenstadt-Mitte 
-•	wir stellen 9 Delegiert*innen bei KDV und KVV
+Wir sind eine Gruppe unterschiedlichster Menschen mit dem gemeinsamen Ziel unseren Kiez zu gestalten.
+
+In die Partei- und Politikgestaltung bringt unsere Abteilung **9 Delegiert*innen für KDV und KVV** ein.
+
+Wir sind stolze Freunde des Ortsvereins [Trier Gartenstadt-Mitte](https://www.spd-trier-mitte.de/).
+
 
 ## Unser Kiez
 Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenviertel, Nikolaiviertel und die Gegend zwischen Museumsinsel und Alexanderplatz. Also der Kern des historischen Berlin.
 
-In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nachbarschaft gestalten möchten.
-
-
+Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://minor-kontor.de/eu-buergerinnen-und-eu-buerger-in-berlin/)
 
 <iframe width="100%" height="300px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/de/map/abteilungsgebiet_977759?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=null&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&captionMenus=true"></iframe>
 
@@ -26,9 +29,16 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
 
 ### Kreisbüro: Mitte
 
+Orga Wahlkampf
+Wahlen Deligierter
+
 ### Kneipe: Anna Koschke
 
-## Vorsitzenden
+Stammtisch
+
+## Organisation
+
+### Vorsitzenden
 <div className="profile-row">
     <Profile 
         name="Kerstin Spriesterbach" 
@@ -47,7 +57,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
 </div>
 
 
-## Stellvertretende Vorsitzenden
+### Stellvertretende Vorsitzenden
 <div className="profile-row">
     <Profile 
         name="Clarissa Schiffel" 
@@ -62,7 +72,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
     ></Profile>
 </div>
 
-## Weitere
+### Weitere
 <div className="profile-row">
     <Profile 
         name="Bettina Andrae" 
@@ -89,7 +99,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
 
 ## MandatsträgerInnen aus Mitte
 
-### Europa
+### Europaparlement
 
 <div className="profile-row">
     <Profile 
@@ -101,7 +111,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
     ></Profile>
 </div>
 
-### Bundesebene
+### Bundestag
 
 <div className="profile-row">
     <Profile 
@@ -114,7 +124,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
     ></Profile>
 </div>
 
-### Landesebene
+### Abgeordnetenhaus
 
 <div className="profile-row">
     <Profile 
@@ -148,7 +158,7 @@ In unserem Abteilungsgebiet leben XX Menschen für und mit denen wir unsere Nach
 </div>
 
 
-### Bezirksebene
+### Bezirk
 
 <div className="profile-row">
     <Profile 
