--- a/docs/wir/aktuelles.mdx
+++ b/docs/wir/aktuelles.mdx
@@ -12,29 +12,21 @@ Unsere Events sind offen für alle. **Eine Parteimitgliedschaft ist nicht erford
   id="calendar-view"
   src='https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ca3f2350-3f02-47f9-90b0-0b5c8b0b9acb/cid-15939253758E7200/index.html' ></iframe>
 
-<details>
-  <summary>Wie läuft ein Stammtisch, Mitgliederversammlung usw. ab?</summary>
-  <div>
-
-
-### Mitgliederversammlung
-
-### Stammtisch
-
-  </div>
-</details>
-
-## Bleib auf dem laufenden
-
 Verpasse kein Update mehr von uns. 
-
-### Instagram
-
-### Aboniere Kalender
 
 <button
   onClick={() => window.open("https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ca3f2350-3f02-47f9-90b0-0b5c8b0b9acb/cid-15939253758E7200/calendar.ics", "_blank")}
   className="button button--primary"
-  href="">Aboniere</button>
+  href="">Aboniere Kalender
+</button>
+
+### Instagram
+
+Oder folg uns auf Instagram
+<button
+  onClick={() => window.open("https://www.instagram.com/spdberlin_alex/", "_blank")}
+  className="button button--primary"
+  href="">Folg uns
+</button>
 
 
