--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -25,17 +25,6 @@ Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://min
 
 <iframe width="100%" height="300px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/de/map/abteilungsgebiet_977759?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=null&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&captionMenus=true"></iframe>
 
-## Hier findest du uns
-
-### Kreisbüro: Mitte
-
-Orga Wahlkampf
-Wahlen Deligierter
-
-### Kneipe: Anna Koschke
-
-Stammtisch
-
 ## Organisation
 
 ### Vorsitzenden
@@ -62,37 +51,43 @@ Stammtisch
     <Profile 
         name="Clarissa Schiffel" 
         srcName="clarissa.jpeg"
+        instagram="claras_schiff"
     ></Profile>
     <Profile 
-        name="David Schmitz" 
-        srcName="david.jpeg"
+        name="Nadine Riez" 
+        srcName="nadine.jpeg"
+        instagram="nadineriez"
     ></Profile>
     <Profile 
-        name="Lucas Hawrylak" 
+        name="Peter Maaß" 
+        srcName="peter.jpeg"
+        instagram="hispeteness"
     ></Profile>
 </div>
 
 ### Weitere
 <div className="profile-row">
     <Profile 
-        name="Bettina Andrae" 
-        rolle="Schriftführerin"
+        name="Benjamin Trunsch" 
+        rolle="Schriftführer"
+        instagram="benny_trx"
+        srcName="benny.jpg"
     ></Profile>
     <Profile 
         name="Lennart Schmidt" 
         rolle="Kassierer"
+        instagram="lenn_xxs"
+        srcName="lenny.jpeg"
     ></Profile>
     <Profile 
         name="Peter Vollmer" 
         rolle="Seniorenbeauftragter"
     ></Profile>
-        <Profile 
-        name="-" 
-        rolle="Revisor*in"
-    ></Profile>
-        <Profile 
-        name="-" 
-        rolle="Mitgliederbeauftragte*r"
+    <Profile 
+        name="Johannes Ott" 
+        instagram="JohannesRu"
+        srcName="ott.jpg"
+        rolle="Mitgliederbeauftragter"
     ></Profile>
 </div>
 
@@ -179,3 +174,9 @@ Stammtisch
         instagram="ephraimgothe"
     ></Profile>
 </div>
+
+## Hier findest du uns
+
+Unsere Treffen finden an den unterschiedlichsten Orten in unserem Kiez statt.
+
+Regelmäßige Anlaufpunkte sind das [Kurt Schumacher Haus](https://spd.berlin/orte/kurt-schumacher-haus/) im Wedding oder unsere Stammkneipe [Anna Koschke](http://www.anna-koschke.de/)
