add nadine twitter

--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -57,6 +57,7 @@ Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://min
         name="Nadine Riez" 
         srcName="nadine.jpeg"
         instagram="nadineriez"
+        twitter="didinable"
     ></Profile>
     <Profile 
         name="Peter Maaß" 
