update peter mit bild

--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -81,7 +81,8 @@ Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://min
         srcName="lenny.jpeg"
     ></Profile>
     <Profile 
-        name="Peter Vollmer" 
+        name="Peter Vollmer"
+        srcName="peter_v.jpeg" 
         rolle="Seniorenbeauftragter"
     ></Profile>
     <Profile 
