--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -84,6 +84,8 @@ Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://min
         name="Peter Vollmer"
         srcName="peter_v.jpeg" 
         rolle="Seniorenbeauftragter"
+        website="https://vollmer.ch"
+        mail="peter@vollmer.ch"
     ></Profile>
     <Profile 
         name="Johannes Ott" 
