--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -6,22 +6,25 @@ import Profile from '@site/src/components/Profile/profile';
 
 # Unsere Abteilung
 
-Die SPD Berlin-Mitte besteht aus 15 Abteilungen. 
-Wir sind **Mitte 2: Alexanderplatz** und unsere Abteilung zählt **170 Genossinen und Genossen**.
+Unsere Abteilung **Mitte 2: Alexanderplatz** zählt **170 Genossinnen und Genossen**.
 
 ![wir](/img/Abteilung.jpg)
 
-Wir sind eine Gruppe unterschiedlichster Menschen mit dem gemeinsamen Ziel unseren Kiez zu gestalten.
+<!-- TODO: Subtitle: Unser Ortsverein nach der Abteilungswahl 2022 vor dem Haus der Statistik am Alexanderplatz -->
 
-In die Partei- und Politikgestaltung bringt unsere Abteilung **9 Delegiert*innen für KDV und KVV** ein.
+Wir sind eine Gruppe unterschiedlicher Menschen mit dem gemeinsamen Ziel, unseren Kiez menschengerecht und zukunftsgewandt für alle zu gestalten.
 
-Wir sind stolze Freunde des Ortsvereins [Trier Gartenstadt-Mitte](https://www.spd-trier-mitte.de/).
+In die Partei- und Politikgestaltung bringt unsere Abteilung **neun Delegiert*Innen für KDV und KVV** ein.
+
+<!-- Wir sind engagiert in ABC und mit XYZ unterwegs -->
+Wir sind Freunde des Ortsvereins [Trier Gartenstadt-Mitte](https://www.spd-trier-mitte.de/).
 
 
 ## Unser Kiez
-Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenviertel, Nikolaiviertel und die Gegend zwischen Museumsinsel und Alexanderplatz. Also der Kern des historischen Berlin.
+<!-- TODO: unser kiez unsere leute -->
+<!-- In der Bildergalierie siehst du einige der persönlichen Foto-Highlights unserer Mitglieder*Innen. -->
 
-Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://minor-kontor.de/eu-buergerinnen-und-eu-buerger-in-berlin/)
+Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenviertel, Nikolaiviertel und der Gegend zwischen Museumsinsel und Alexanderplatz. Also der Kern des historischen Berlin.
 
 <iframe width="100%" height="300px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/de/map/abteilungsgebiet_977759?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=null&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&captionMenus=true"></iframe>
 
@@ -178,8 +181,8 @@ Interessante Infos zur Vielfalt im Kiez und Berlin findest du [hier](https://min
     ></Profile>
 </div>
 
-## Hier findest du uns
+## So findest du uns...
 
-Unsere Treffen finden an den unterschiedlichsten Orten in unserem Kiez statt.
+Unsere Treffen finden an den unterschiedlichsten Orten in unserem Kiez statt. Wenn du wissen möchtest, wie du bei uns aktiv werden kannst, klicke einfach [hier](/machmit).
 
-Regelmäßige Anlaufpunkte sind das [Kurt Schumacher Haus](https://spd.berlin/orte/kurt-schumacher-haus/) im Wedding oder unsere Stammkneipe [Anna Koschke](http://www.anna-koschke.de/)
+Du bist neugierig? Wir treffen uns jeden 4. Donnerstag in unserer Stammkneipe [Anna Koschke](http://www.anna-koschke.de/).
