update clarisse img

--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -53,7 +53,7 @@ Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenvierte
 <div className="profile-row">
     <Profile 
         name="Clarissa Schiffel" 
-        srcName="clarissa.jpeg"
+        srcName="clarissa.jpg"
         instagram="claras_schiff"
     ></Profile>
     <Profile 
