--- a/docs/wir/aktuelles.mdx
+++ b/docs/wir/aktuelles.mdx
@@ -4,21 +4,8 @@ sidebar_position: 4
 
 # Kalender
 
-Hier findest du alle anstehende Termine und einen kurzen Überblick über unsere Aktivitäten.
-
-Unsere Events sind offen für alle. **Eine Parteimitgliedschaft ist nicht erforderlich. [Sprich uns an](mailto:Johannes.Rupieper@mac.com) und [mach mit](/machmit)!** 
-
-<iframe 
-  id="calendar-view"
-  src='https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ca3f2350-3f02-47f9-90b0-0b5c8b0b9acb/cid-15939253758E7200/index.html' ></iframe>
-
-Verpasse kein Update mehr von uns. 
-
-<button
-  onClick={() => window.open("https://outlook.live.com/owa/calendar/00000000-0000-0000-0000-000000000000/ca3f2350-3f02-47f9-90b0-0b5c8b0b9acb/cid-15939253758E7200/calendar.ics", "_blank")}
-  className="button button--primary"
-  href="">Aboniere Kalender
-</button>
+Schreib uns an und werde Teil unserer Gemeinschaft. Wir freuen uns auf dich!
+Unsere Veranstaltungen sind offen für alle. **Eine Parteimitgliedschaft ist nicht erforderlich. [Sprich uns an](mailto:Johannes.Rupieper@mac.com) und [mach mit](/machmit)!** 
 
 ### Instagram
 
