--- a/docs/wir/intro.mdx
+++ b/docs/wir/intro.mdx
@@ -3,6 +3,7 @@ sidebar_position: 1
 ---
 
 import Profile from '@site/src/components/Profile/profile';
+import AbteilungsMap from '@site/src/components/AbteilungsMap';
 
 # Unsere Abteilung
 
@@ -26,7 +27,8 @@ Wir sind Freunde des Ortsvereins [Trier Gartenstadt-Mitte](https://www.spd-trier
 
 Unser Abteilungsgebiet besteht aus den Kiezen Spandauer Vorstadt, Scheunenviertel, Nikolaiviertel und der Gegend zwischen Museumsinsel und Alexanderplatz. Also der Kern des historischen Berlin.
 
-<iframe width="100%" height="300px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/de/map/abteilungsgebiet_977759?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=null&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=undefined&captionBar=false&captionMenus=true"></iframe>
+<AbteilungsMap></AbteilungsMap>
+
 
 ## Organisation
 
